[gd_scene load_steps=4 format=3 uid="uid://cp7aitcgekfv6"]

[ext_resource type="Script" path="res://ui.gd" id="1_jij54"]
[ext_resource type="Texture2D" uid="uid://duk16u3rnxpje" path="res://icon.svg" id="2_hepay"]
[ext_resource type="Script" path="res://Store.gd" id="3_35f08"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jij54")

[node name="SettingsMenu" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 65.0
offset_top = 300.0
offset_right = 959.0
offset_bottom = 1592.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -301.0
offset_top = -409.0
offset_right = 302.0
offset_bottom = 449.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Settings"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="Label2" type="Label" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Master"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Music"
horizontal_alignment = 1

[node name="HSlider2" type="HSlider" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Sound"
horizontal_alignment = 1

[node name="HSlider3" type="HSlider" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="SettingsMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
alignment = 1

[node name="CheckBox2" type="CheckBox" parent="SettingsMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="CheckBox3" type="CheckBox" parent="SettingsMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 25.0
offset_right = 163.0
offset_bottom = 161.0
icon = ExtResource("2_hepay")

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_left = 632.0
offset_top = 35.0
offset_right = 1198.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 75
text = "Score : xxxx"

[node name="StoreButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 236.0
offset_top = 1707.0
offset_right = 811.0
offset_bottom = 1836.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 75
text = "Shop"

[node name="Store" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_top = 210.0
offset_right = 1077.0
offset_bottom = 1918.0
script = ExtResource("3_35f08")

[node name="Label" type="Label" parent="Store"]
layout_mode = 2
offset_left = 100.0
offset_right = 969.0
offset_bottom = 137.0
theme_override_font_sizes/font_size = 100
text = "Store"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Store"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 177.0
offset_bottom = -230.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Store/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Store/ScrollContainer/MarginContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ExitButton" type="Button" parent="Store"]
layout_mode = 0
offset_left = 238.0
offset_top = 1495.0
offset_right = 847.0
offset_bottom = 1640.0
theme_override_font_sizes/font_size = 100
text = "Exit
"

[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="StoreButton" to="." method="_on_store_button_pressed"]
[connection signal="visibility_changed" from="Store" to="Store" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="Store/ScrollContainer/MarginContainer/VBoxContainer" to="Store" method="_on_v_box_container_visibility_changed"]
[connection signal="pressed" from="Store/ExitButton" to="." method="_on_exit_button_pressed"]
